[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/Games Screen/Games Screen.gd" type="Script" id=1]
[ext_resource path="res://UI/Games Screen/Games Data.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Theme/UITheme.tres" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
draw_center = false
border_width_right = 1
border_color = Color( 0.129412, 0.219608, 0.403922, 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[node name="Games Screen" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="GamesScreenListContainer" type="Panel" parent="."]
margin_right = 400.0
margin_bottom = 1080.0
rect_min_size = Vector2( 400, 0 )
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="GamesListScroll" type="ScrollContainer" parent="GamesScreenListContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 4.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 3 )

[node name="GamesList" type="VBoxContainer" parent="GamesScreenListContainer/GamesListScroll"]
margin_right = 400.0
margin_bottom = 1076.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Games Data" parent="." instance=ExtResource( 2 )]
margin_left = 404.0
